[gd_scene load_steps=8 format=2]

[ext_resource path="res://0 - General/Sprites/Billete desplegado SIN TITULO.png" type="Texture" id=1]
[ext_resource path="res://0 - General/Scripts/SettingsScene.gd" type="Script" id=2]
[ext_resource path="res://0 - General/Themes/Normal.tres" type="Theme" id=3]
[ext_resource path="res://0 - General/Sprites/UI/cancel.svg" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 764, 472 )
margin_left = 91.1354
margin_right = 129.108
margin_top = 202.842
margin_bottom = 169.613

[sub_resource type="Theme" id=4]
Panel/styles/panel = SubResource( 5 )

[sub_resource type="DynamicFont" id=2]

[node name="SettingsMenu" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.439216 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.5
margin_top = -289.0
margin_right = 300.5
margin_bottom = 289.0
theme = SubResource( 4 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 221.0
margin_top = 97.0
margin_right = 380.0
margin_bottom = 144.0
text = "OPCIONES"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 150.0
margin_right = -50.0
margin_bottom = -100.0
alignment = 1

[node name="Audio" type="GridContainer" parent="Panel/VBoxContainer"]
margin_top = 53.0
margin_right = 501.0
margin_bottom = 224.0
custom_constants/vseparation = 15
custom_constants/hseparation = 30
columns = 2

[node name="SoundLbl" type="Label" parent="Panel/VBoxContainer/Audio"]
margin_right = 130.0
margin_bottom = 47.0
text = "AUDIO"

[node name="SoundChk" type="CheckButton" parent="Panel/VBoxContainer/Audio"]
margin_left = 437.0
margin_right = 501.0
margin_bottom = 47.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 2 )

[node name="MusicaLbl" type="Label" parent="Panel/VBoxContainer/Audio"]
margin_top = 62.0
margin_right = 130.0
margin_bottom = 109.0
text = "   MÃºsica"

[node name="MusicaChk" type="CheckButton" parent="Panel/VBoxContainer/Audio"]
margin_left = 437.0
margin_top = 62.0
margin_right = 501.0
margin_bottom = 109.0
size_flags_horizontal = 10

[node name="EfectosLbl" type="Label" parent="Panel/VBoxContainer/Audio"]
margin_top = 124.0
margin_right = 130.0
margin_bottom = 171.0
text = "   Efectos"

[node name="EfectosChk" type="CheckButton" parent="Panel/VBoxContainer/Audio"]
margin_left = 437.0
margin_top = 124.0
margin_right = 501.0
margin_bottom = 171.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 2 )

[node name="Debug" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 228.0
margin_right = 501.0
margin_bottom = 275.0

[node name="DebugLbl" type="Label" parent="Panel/VBoxContainer/Debug"]
margin_right = 107.0
margin_bottom = 47.0
text = "DEBUG"

[node name="DebugChk" type="CheckButton" parent="Panel/VBoxContainer/Debug"]
margin_left = 437.0
margin_right = 501.0
margin_bottom = 47.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 2 )

[node name="CloseBtn" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )

[connection signal="toggled" from="Panel/VBoxContainer/Audio/SoundChk" to="." method="_on_SoundChk_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Audio/MusicaChk" to="." method="_on_MusicaChk_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Audio/EfectosChk" to="." method="_on_EfectosChk_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Debug/DebugChk" to="." method="_on_DebugChk_toggled"]
[connection signal="pressed" from="Panel/CloseBtn" to="." method="_on_CloseBtn_pressed"]
